# target-mssql

./: .gitignore  README.md  pyproject.toml  sample_config.json
.github/workflows/: ci.yaml  veracode-static-scan.yml
target_mssql/: connector.py  sinks.py  target.py  utils.py
