[tool.poetry]
name = "target-mssql"
version = "1.0.5"
description = "`target-mssql` is a Singer target for mssql, built with the Meltano SDK for Singer Targets."
authors = ["Varicent ELT", "Henning Holgersen"]
keywords = [
    "ELT",
    "mssql",
]
license = "Apache 2.0"

# requests and urllib3 version must be pinned
# https://stackoverflow.com/questions/76326096/requests-urllib3-and-cachecontrol-version-downgrade-to-working-in-poetry
[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "2.28.0"
singer-sdk = "==0.13.0"
pymssql = ">=2.2.5"
urllib3 = "1.26.15"
pyodbc = "^4.0.39"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.9"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_mssql"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mssql = 'target_mssql.target:Targetmssql.cli'
